--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
